--- a/faq.html
+++ b/faq.html
@@ -17,7 +17,7 @@
     <nav class="container mx-auto px-4 py-4 flex items-center justify-between">
       <div class="flex items-center space-x-3">
         <img src="/assets/images/brightwave-logo.png" alt="BrightWave Logo" class="h-10" />
-        <h1 class="text-2xl font-bold text-blue-400">BrightWave Enterprises</h1>
+        <h1 class="text-2xl font-bold text-blue-400">BrightWave Enterprise</h1>
       </div>
       <button class="md:hidden menu-toggle text-2xl text-white" aria-label="Toggle navigation menu">☰</button>
       <ul class="hidden md:flex space-x-6 text-lg font-semibold">
@@ -144,7 +144,7 @@
   <!-- Footer -->
   <footer class="bg-gray-800 text-white py-8">
     <div class="container mx-auto px-4 text-center">
-      <p class="mb-4 font-medium">© 2025 BrightWave Enterprises. All rights reserved.</p>
+      <p class="mb-4 font-medium">© 2025 BrightWave Enterprise. All rights reserved.</p>
       <div class="flex justify-center space-x-6 mb-4">
         <a href="https://www.facebook.com/share/19BvJAymc3/?mibextid=wwXIfr" class="flex items-center space-x-2 hover:text-blue-400 font-semibold">
           <i class="fab fa-facebook-f"></i>
