--- a/hostel-detail.html
+++ b/hostel-detail.html
@@ -253,9 +253,9 @@
         <i class="fab fa-whatsapp mr-2"></i> WhatsApp
       </button>
       <div id="whatsappDropdown" class="hidden absolute bottom-full right-0 mb-2 w-48 bg-gray-800 rounded-lg shadow-lg z-50">
-        <a href="https://wa.me/2348037669462?text=Interested%20in%20Phase%201%20Hostel" class="block px-4 py-2 text-sm text-white hover:bg-gray-700 rounded-t-lg">General Inquiries (+234 803 766 9462)</a>
-        <a href="https://wa.me/2349038402914?text=Interested%20in%20Phase%201%20Hostel" class="block px-4 py-2 text-sm text-white hover:bg-gray-700">Property Manager (+234 903 840 2914)</a>
-        <a href="https://wa.me/2349075381905?text=Interested%20in%20Phase%201%20Hostel" class="block px-4 py-2 text-sm text-white hover:bg-gray-700 rounded-b-lg">Sales Team (+234 907 538 1905)</a>
+        <a href="https://wa.me/2348037669462?text=Interested%20in%20Phase%201%20Hostel" class="block px-4 py-2 text-sm text-white hover:bg-gray-700 rounded-t-lg">Property Manager (+234 803 766 9462)</a>
+        <a href="https://wa.me/2349038402914?text=Interested%20in%20Phase%201%20Hostel" class="block px-4 py-2 text-sm text-white hover:bg-gray-700">Agent (+234 903 840 2914)</a>
+        <a href="https://wa.me/2349075381905?text=Interested%20in%20Phase%201%20Hostel" class="block px-4 py-2 text-sm text-white hover:bg-gray-700 rounded-b-lg">Agent (+234 907 538 1905)</a>
       </div>
     </div>
   </div>
