--- a/hostel-detail.html
+++ b/hostel-detail.html
@@ -21,6 +21,8 @@
   <!-- AOS for Animations -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <!-- Custom Styles -->
+  <link rel="stylesheet" href="/style.css" />
 </head>
 <body class="font-sans bg-gray-900 text-white">
 
@@ -414,7 +416,7 @@
       }
 
       try {
-        const response = await fetch("/api/contact", {
+        const response = await fetch("https://api.brightwaveenterprises.online/api/contact", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ fullName, email, phone, message, formOrigin: "Hostel Detail Page" })
